# python-xiangqi

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  engine.py  index.html  mkdocs.yml  play.py  pyproject.toml  rustfmt.toml  serve.py  setup.py  sitemap.xml
.github/workflows/: ci.yml
libxiangqi/: __init__.py
libxiangqi/static/: index.html
src/: lib.rs  main.rs
test/: test_advisor.py  test_cannon.py  test_chariot.py  test_core.py  test_elephant.py  test_game_state.py  test_general.py  test_horse.py  test_illegal_move.py  test_side.py  test_soldier.py
xiangqi/: __init__.py
