[project]
name = "libxiangqi"
version = "0.1.0"
description = "xiangqi library for Python"
readme = "README.md"
authors = [
  { name = "hbhungg", email = "hung.ba.huynh@proton.me" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "libxiangqi._libxiangqi"

[dependency-groups]
dev = [
  "maturin>=1.10.2",
  "maturin-import-hook>=0.3.0",
  "mypy>=1.19.0",
  "pytest>=9.0.2",
  "ruff>=0.14.10",
]


[tool.ruff]
line-length = 150
indent-width = 2
preview = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
skip-magic-trailing-comma = true
